--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 elevenlabs==1.12.1
 openai==1.14.2
-sounddevice==0.4.6
+# sounddevice==0.4.6
 streamlit==1.32.2
+streamlit-webrtc
+numpy
+scipy
+av
+requests
